[package]
name = "socials_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
mongodb = "2.3.0"
serde = "1.0.145"
serde_json = "1.0"
futures = "0.3.21"
log = "0.4.17"
env_logger = "0.9.0"
fantoccini = "0.19.3"
async-trait = "0.1.57"
webdriver = "0.46.0"


# custom dependencies
[dependencies.vk_client]
git = "https://github.com/toobased/vk-client"
rev="1f6edf9"


[dependencies.uuid]
version = "1.1.2"
features = [
  "serde"
]

[dependencies.chrono]
version = "0.4"
features = [
  "serde"
]

[dependencies.bson]
version = "2.3.0"
features = [
  "chrono-0_4",
  "serde_with"
]

[dependencies.serde_with]
version = "2.0.0"


